# Sygil

./: LICENSE  README.md
package/: README.md  pyproject.toml
package/source/: __init__.py  __main__.py  sygil.py  symbolic.py  syntaxValidator.py  tokenizer.py
